[package]
name = "dot"
version = "0.1.0"
authors = ["David Thompson <david.arthur.thompson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
dirs = "3.0.1"
regex = "1.4.3"
structopt = "0.3"
colour = "0.5.0"
glob = "0.3.0"
