[package]
name = "dotm"
version = "0.1.5"
edition = "2018"
description = "Dotfile Manager"
license = "MIT"
repository = "https://github.com/ysdexlic/dot"
readme = "README.md"
authors = ["David Thompson <david.arthur.thompson@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["dotfile", "manager", "dot"]

[[bin]]
name = "dot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
dirs = "3.0.1"
regex = "1.4.3"
structopt = "0.3"
colour = "0.5.0"
glob = "0.3.0"
